nothing valuable changed

--- a/Emo Reco.ipynb
+++ b/Emo Reco.ipynb
@@ -16,7 +16,6 @@
     "import numpy as np\n",
     "import random\n",
     "import re\n",
-    "import pickle\n",
     "import pathlib\n",
     "\n",
     "%matplotlib inline\n"
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,12 +119,12 @@
    "source": [
     "l = np.array(test_data)\n",
     "print(l.shape)\n",
-    "pred, conf = fishface.predict(l[10])"
+    "# pred, conf = fishface.predict(l[10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -141,13 +140,16 @@
    ],
    "source": [
     "correct = run_recognizer()\n",
+    "fishface.save(\"fisher face classifer.xml\")\n",
     "print(\"got\", correct, \"percent correct! \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "faceDet = cv2.CascadeClassifier(\"OpenCV_FaceCascade/haarcascade_frontalface_default.xml\")\n",
@@ -240,7 +242,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def brightness_script(dataset_dir):\n",
+    "    for index, emotion in enumerate(emotions):\n",
+    "        for image in glob.glob(\"%s/%s/*\"% (dataset_dir, emotion)):\n",
+    "            image = cv2.imread(image)\n",
+    "            gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "            for i in range(10, 100)\n",
+    "    return images, image_labels"
+   ]
   }
  ],
  "metadata": {
